# scorecard

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: alerts.py  api.py  auth.py  channels.py  db.py  demo.py  entry_ops.py  grid.py  inbound.py  main.py  replies.py  schema.sql  scoring.py  slack.py  weeks.py
app/static/: scorecard.css
app/templates/: _about.html  _cell.html  _cell_form.html  _checkin_row.html  _display_body.html  _grid_table.html  _icons.html  _summary.html  _tv_parts.html  account.html  admin_activity.html  admin_metric_edit.html  admin_metrics.html  admin_settings.html  admin_targets.html  admin_tokens.html  admin_users.html  base.html  checkin.html  display.html  grid.html  login.html  onethreeone.html
deploy/: backup.sh  nginx.conf
migrate/: add_admin_scope.py  seed.py  seed_data.example.json  slack_two_way.py
tests/: test_activity.py  test_api_archive.py  test_board.py  test_channels.py  test_checkin.py  test_demo.py  test_impersonation.py  test_inbound_channels.py  test_magic_links.py  test_migrations.py  test_nudges.py  test_scoring.py  test_slack_inbound.py  test_slack_parse.py  test_weeks.py
