[project]
name = "aprendio-scorecard"
version = "1.0.0"
description = "Aprendio company scorecard: TV display, weekly editing, Hermes API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "argon2-cffi>=23.1",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
